expanded recents limit, css fix for long notebook names do not wrap in space allowed

--- a/htdocs/css/bootstrap-rcloud-tweaks.css
+++ b/htdocs/css/bootstrap-rcloud-tweaks.css
@@ -444,3 +444,7 @@ ul.recent-notebooks-list li a {
     width: 100%;
 
 }
+
+.jqtree-element .jqtree-title.jqtree_common {
+    word-break: break-all;
+}
